Remove positional embedding, replace custom TokenAndPositionEmbedding layer with single token keras.Embedding layer

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -93,56 +93,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"functional_1\"\n",
+      "Model: \"functional_27\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         [(None, 50)]              0         \n",
+      "input_4 (InputLayer)         [(None, 50)]              0         \n",
       "_________________________________________________________________\n",
-      "token_and_position_embedding (None, 50, 32)            321600    \n",
+      "embedding_6 (Embedding)      (None, 50, 32)            320000    \n",
       "_________________________________________________________________\n",
-      "self_attention (SelfAttentio (None, 50, 32)            3168      \n",
+      "self_attention_3 (SelfAttent (None, 50, 32)            3168      \n",
       "_________________________________________________________________\n",
-      "global_average_pooling1d (Gl (None, 32)                0         \n",
+      "global_average_pooling1d_3 ( (None, 32)                0         \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 2)                 66        \n",
+      "dense_19 (Dense)             (None, 2)                 66        \n",
       "=================================================================\n",
-      "Total params: 324,834\n",
-      "Trainable params: 324,834\n",
+      "Total params: 323,234\n",
+      "Trainable params: 323,234\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/4\n",
-      "135/135 [==============================] - 2s 13ms/step - loss: 0.4532 - accuracy: 0.7882\n",
+      "135/135 [==============================] - 2s 14ms/step - loss: 0.4101 - accuracy: 0.8098 0s - loss: 0.4685 \n",
       "Epoch 2/4\n",
-      "135/135 [==============================] - 2s 18ms/step - loss: 0.0794 - accuracy: 0.9756\n",
+      "135/135 [==============================] - 3s 20ms/step - loss: 0.0628 - accuracy: 0.9809\n",
       "Epoch 3/4\n",
-      "135/135 [==============================] - 2s 15ms/step - loss: 0.0205 - accuracy: 0.9949\n",
+      "135/135 [==============================] - 2s 15ms/step - loss: 0.0180 - accuracy: 0.9958\n",
       "Epoch 4/4\n",
-      "135/135 [==============================] - 2s 14ms/step - loss: 0.0082 - accuracy: 0.9984\n",
-      "45/45 [==============================] - 0s 3ms/step - loss: 0.0423 - accuracy: 0.9853\n"
+      "135/135 [==============================] - 3s 20ms/step - loss: 0.0074 - accuracy: 0.9984\n",
+      "45/45 [==============================] - 0s 5ms/step - loss: 0.0407 - accuracy: 0.9839\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.042269740253686905, 0.9853351712226868]"
+       "[0.04066591337323189, 0.9839385747909546]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "l_input = layers.Input(shape=(max_len,))\n",
-    "l_embedding = TokenAndPositionEmbedding(max_len, n_words, embed_dim)(l_input)\n",
+    "embedding_layer = layers.Embedding(input_dim=n_words, output_dim=embed_dim)\n",
+    "l_embedding = embedding_layer(l_input)\n",
     "\n",
     "l_mha = SelfAttention(embed_dim)(l_embedding)\n",
     "l_pool = layers.GlobalAveragePooling1D()(l_mha)\n",
@@ -159,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 0.]]\n",
-      "['No']\n"
+      "WARNING:tensorflow:5 out of the last 144 calls to <function Model.make_predict_function.<locals>.predict_function at 0x0000023340915828> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "(1, 50, 32)\n"
      ]
     }
    ],
@@ -181,14 +182,41 @@
     "x_pred = tokenizer.texts_to_sequences([\"Hi john, this is tyler. I am emailing you to talk about the amount of ideas I have for\"]);\n",
     "x_pred = sequence.pad_sequences(x_pred, maxlen=max_len, truncating='post', padding='post', value=0)\n",
     "\n",
-    "# out_pred = model.predict(np.array([x_pred]))\n",
-    "out_pred = model.predict(X_train[0:1])\n",
+    "out_pred = model_emb.predict(x_pred)\n",
     "print(\n",
-    "    one_hot_decode(out_pred)\n",
-    ")\n",
-    "print(\n",
-    "    tokenizer.sequences_\n",
+    "    out_pred.shape\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.03690045  0.01559929  0.02776337 ... -0.01968681 -0.01474567\n",
+      "   0.0296577 ]\n",
+      " [ 0.04355304  0.02628536 -0.01919303 ... -0.08933982  0.03083475\n",
+      "   0.10062259]\n",
+      " [ 0.06479541  0.02936449 -0.05001809 ... -0.04095309  0.01373926\n",
+      "  -0.0189221 ]\n",
+      " ...\n",
+      " [ 0.0024655   0.0108035   0.03648119 ...  0.01778117 -0.0332409\n",
+      "   0.04605789]\n",
+      " [-0.00102471 -0.01526888  0.0136312  ...  0.0252532  -0.02494303\n",
+      "  -0.04669187]\n",
+      " [ 0.00992849 -0.01687845 -0.01907049 ...  0.02761716 -0.01135495\n",
+      "  -0.02291597]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "token_emb_weights = embedding_layer.token_emb.get_weights()[0]\n",
+    "\n",
+    "print(token_emb_weights)"
    ]
   },
   {
