Add function to reverse token embedding layer

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -160,14 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 144 calls to <function Model.make_predict_function.<locals>.predict_function at 0x0000023340915828> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "[[ 235  177   14   12 8417    8   34 6368    6    2  336   64    1  735\n",
+      "     4 1105    8   22    9    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0    0    0]]\n",
+      "WARNING:tensorflow:7 out of the last 146 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000002334097A708> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
       "(1, 50, 32)\n"
      ]
     }
@@ -175,12 +179,15 @@
    "source": [
     "### DEVELOPMENT AREA ###\n",
     "\n",
+    "#create test inputs\n",
+    "x_pred = tokenizer.texts_to_sequences([\n",
+    "    \"Hi john, this is tyler. I am emailing you to talk about the amount of ideas I have for\"\n",
+    "    \"Hi john, this is tyler. I am emailing you to talk about the amount of ideas I have for\"\n",
+    "]);\n",
+    "x_pred = sequence.pad_sequences(x_pred, maxlen=max_len, truncating='post', padding='post', value=0)\n",
+    "\n",
     "#define intermediate model (model that does input -> embedding)\n",
     "model_emb = keras.Model(inputs=l_input, outputs=l_embedding)\n",
-    "\n",
-    "#test inputs\n",
-    "x_pred = tokenizer.texts_to_sequences([\"Hi john, this is tyler. I am emailing you to talk about the amount of ideas I have for\"]);\n",
-    "x_pred = sequence.pad_sequences(x_pred, maxlen=max_len, truncating='post', padding='post', value=0)\n",
     "\n",
     "out_pred = model_emb.predict(x_pred)\n",
     "print(\n",
@@ -190,34 +197,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.03690045  0.01559929  0.02776337 ... -0.01968681 -0.01474567\n",
-      "   0.0296577 ]\n",
-      " [ 0.04355304  0.02628536 -0.01919303 ... -0.08933982  0.03083475\n",
-      "   0.10062259]\n",
-      " [ 0.06479541  0.02936449 -0.05001809 ... -0.04095309  0.01373926\n",
-      "  -0.0189221 ]\n",
-      " ...\n",
-      " [ 0.0024655   0.0108035   0.03648119 ...  0.01778117 -0.0332409\n",
-      "   0.04605789]\n",
-      " [-0.00102471 -0.01526888  0.0136312  ...  0.0252532  -0.02494303\n",
-      "  -0.04669187]\n",
-      " [ 0.00992849 -0.01687845 -0.01907049 ...  0.02761716 -0.01135495\n",
-      "  -0.02291597]]\n"
+      "[[ 235  177   14   12 8417    8   34 6368    6    2  336   64    1  735\n",
+      "     4 1105    8   22    9    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0    0    0]]\n"
      ]
     }
    ],
    "source": [
-    "token_emb_weights = embedding_layer.token_emb.get_weights()[0]\n",
+    "def reverse_token_emb(X):\n",
+    "    global embedding_layer\n",
+    "    lookup_dict = {}\n",
+    "    \n",
+    "    token_emb_weights = embedding_layer.get_weights()[0]\n",
+    "    out = []\n",
+    "    for word in X:\n",
+    "        out_l2 = []\n",
+    "        for embed_vec in word:\n",
+    "            tuple_embed_vec = tuple(embed_vec)\n",
+    "            \n",
+    "            #if lookup dict contains embedded vector use it\n",
+    "            if lookup_dict.get(tuple_embed_vec, None) != None:\n",
+    "                out_l2.append(lookup_dict[tuple_embed_vec])\n",
+    "            #else search for embedding and cache it\n",
+    "            else:\n",
+    "                for idx in range(token_emb_weights.shape[0]):\n",
+    "                    if np.array_equal(embed_vec, token_emb_weights[idx]):\n",
+    "                        lookup_dict[tuple_embed_vec] = idx\n",
+    "                        out_l2.append(idx)\n",
+    "                    \n",
+    "        out.append(out_l2)\n",
+    "    \n",
+    "    return np.array(out)\n",
     "\n",
-    "print(token_emb_weights)"
+    "print(reverse_token_emb(out_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
