Add first pass of attention reverse-engineering steps (working)

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from keras_preprocessing import sequence\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder, normalize\n",
     "\n",
     "from spam_dataset import SpamDataset\n",
     "from layers import *"
@@ -93,49 +93,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"functional_27\"\n",
+      "Model: \"functional_39\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_4 (InputLayer)         [(None, 50)]              0         \n",
+      "input_5 (InputLayer)         [(None, 50)]              0         \n",
       "_________________________________________________________________\n",
-      "embedding_6 (Embedding)      (None, 50, 32)            320000    \n",
+      "embedding_7 (Embedding)      (None, 50, 32)            320000    \n",
       "_________________________________________________________________\n",
-      "self_attention_3 (SelfAttent (None, 50, 32)            3168      \n",
+      "self_attention_4 (SelfAttent (None, 50, 32)            3168      \n",
       "_________________________________________________________________\n",
-      "global_average_pooling1d_3 ( (None, 32)                0         \n",
+      "global_average_pooling1d_4 ( (None, 32)                0         \n",
       "_________________________________________________________________\n",
-      "dense_19 (Dense)             (None, 2)                 66        \n",
+      "dense_24 (Dense)             (None, 2)                 66        \n",
       "=================================================================\n",
       "Total params: 323,234\n",
       "Trainable params: 323,234\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/4\n",
-      "135/135 [==============================] - 2s 14ms/step - loss: 0.4101 - accuracy: 0.8098 0s - loss: 0.4685 \n",
+      "135/135 [==============================] - 1s 11ms/step - loss: 0.4222 - accuracy: 0.8096\n",
       "Epoch 2/4\n",
-      "135/135 [==============================] - 3s 20ms/step - loss: 0.0628 - accuracy: 0.9809\n",
+      "135/135 [==============================] - 2s 16ms/step - loss: 0.0624 - accuracy: 0.9791\n",
       "Epoch 3/4\n",
-      "135/135 [==============================] - 2s 15ms/step - loss: 0.0180 - accuracy: 0.9958\n",
+      "135/135 [==============================] - 3s 20ms/step - loss: 0.0181 - accuracy: 0.9960\n",
       "Epoch 4/4\n",
-      "135/135 [==============================] - 3s 20ms/step - loss: 0.0074 - accuracy: 0.9984\n",
-      "45/45 [==============================] - 0s 5ms/step - loss: 0.0407 - accuracy: 0.9839\n"
+      "135/135 [==============================] - 3s 19ms/step - loss: 0.0074 - accuracy: 0.9984\n",
+      "45/45 [==============================] - 0s 4ms/step - loss: 0.0410 - accuracy: 0.9839\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.04066591337323189, 0.9839385747909546]"
+       "[0.04098685458302498, 0.9839385747909546]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,8 +145,8 @@
     "embedding_layer = layers.Embedding(input_dim=n_words, output_dim=embed_dim)\n",
     "l_embedding = embedding_layer(l_input)\n",
     "\n",
-    "l_mha = SelfAttention(embed_dim)(l_embedding)\n",
-    "l_pool = layers.GlobalAveragePooling1D()(l_mha)\n",
+    "l_sa = SelfAttention(embed_dim)(l_embedding)\n",
+    "l_pool = layers.GlobalAveragePooling1D()(l_sa)\n",
     "l_output = layers.Dense(2, activation=\"softmax\")(l_pool)\n",
     "\n",
     "model = keras.Model(inputs=l_input, outputs=l_output)\n",
@@ -160,19 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 235  177   14   12 8417    8   34 6368    6    2  336   64    1  735\n",
-      "     4 1105    8   22    9    0    0    0    0    0    0    0    0    0\n",
-      "     0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "     0    0    0    0    0    0    0    0]]\n",
-      "WARNING:tensorflow:7 out of the last 146 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000002334097A708> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "(1, 50, 32)\n"
+      "WARNING:tensorflow:11 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x00000233403D8DC8> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "WARNING:tensorflow:11 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000002333EF55AF8> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     }
    ],
@@ -182,62 +178,52 @@
     "#create test inputs\n",
     "x_pred = tokenizer.texts_to_sequences([\n",
     "    \"Hi john, this is tyler. I am emailing you to talk about the amount of ideas I have for\"\n",
-    "    \"Hi john, this is tyler. I am emailing you to talk about the amount of ideas I have for\"\n",
+    "    , \"Nigerian prince, this is callum the devil calling to come and kill you (over the phone)\"\n",
     "]);\n",
     "x_pred = sequence.pad_sequences(x_pred, maxlen=max_len, truncating='post', padding='post', value=0)\n",
     "\n",
     "#define intermediate model (model that does input -> embedding)\n",
     "model_emb = keras.Model(inputs=l_input, outputs=l_embedding)\n",
+    "model_satt = keras.Model(inputs=l_input, outputs=l_sa)\n",
     "\n",
-    "out_pred = model_emb.predict(x_pred)\n",
-    "print(\n",
-    "    out_pred.shape\n",
-    ")"
+    "x_pred_embedding = model_emb.predict(x_pred)\n",
+    "x_pred_satt = model_satt.predict(x_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 235  177   14   12 8417    8   34 6368    6    2  336   64    1  735\n",
-      "     4 1105    8   22    9    0    0    0    0    0    0    0    0    0\n",
-      "     0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "     0    0    0    0    0    0    0    0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def reverse_token_emb(X):\n",
     "    global embedding_layer\n",
+    "\n",
+    "    X = np.array(X)\n",
     "    lookup_dict = {}\n",
     "    \n",
     "    token_emb_weights = embedding_layer.get_weights()[0]\n",
-    "    out = []\n",
+    "    texts = []\n",
     "    for word in X:\n",
-    "        out_l2 = []\n",
+    "        text_word_idxs = []\n",
     "        for embed_vec in word:\n",
     "            tuple_embed_vec = tuple(embed_vec)\n",
     "            \n",
     "            #if lookup dict contains embedded vector use it\n",
     "            if lookup_dict.get(tuple_embed_vec, None) != None:\n",
-    "                out_l2.append(lookup_dict[tuple_embed_vec])\n",
+    "                text_word_idxs.append(lookup_dict[tuple_embed_vec])\n",
     "            #else search for embedding and cache it\n",
     "            else:\n",
     "                for idx in range(token_emb_weights.shape[0]):\n",
     "                    if np.array_equal(embed_vec, token_emb_weights[idx]):\n",
     "                        lookup_dict[tuple_embed_vec] = idx\n",
-    "                        out_l2.append(idx)\n",
+    "                        text_word_idxs.append(idx)\n",
     "                    \n",
-    "        out.append(out_l2)\n",
+    "        texts.append(text_word_idxs)\n",
     "    \n",
-    "    return np.array(out)\n",
+    "    return np.array(texts)\n",
     "\n",
-    "print(reverse_token_emb(out_pred))"
+    "# print(tokenizer.sequences_to_texts(reverse_token_emb(out_pred)))"
    ]
   },
   {
@@ -245,7 +231,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "att_layer_values = np.array(model_satt(X_test))\n",
+    "emb_layer_values = np.array(model_emb(X_test))\n",
+    "att_scores = att_layer_values - emb_layer_values\n",
+    "\n",
+    "#sum per token\n",
+    "att_scores_per_token = np.array([np.average(arr, axis=1) for arr in att_scores])\n",
+    "#normalize over rows (sklearn.preprocessing.normalize)\n",
+    "att_scores_per_token = normalize(att_scores_per_token)\n",
+    "\n",
+    "tokens = reverse_token_emb(emb_layer_values)\n",
+    "\n",
+    "reverse_word_index = {y:x for x,y in tokenizer.word_index.items()}\n",
+    "\n",
+    "token_att_scores = []\n",
+    "#len(tokens) == len(att_scores_per_token)\n",
+    "for i in range(len(tokens)):\n",
+    "    #zip the att scores and tokens together for each word\n",
+    "    token_att_scores.append(\n",
+    "        np.array(\n",
+    "            list(zip(tokens[i], att_scores_per_token[i]))\n",
+    "        )\n",
+    "    )\n",
+    "token_att_scores = np.array(token_att_scores)\n",
+    "\n",
+    "print(token_att_scores.shape)\n",
+    "word_list = []\n",
+    "for item in token_att_scores:\n",
+    "    for pair in item:\n",
+    "        if (reverse_word_index.get(pair[0], None) != None):\n",
+    "            word_list.append((reverse_word_index[pair[0]], pair[1]))\n",
+    "# word_list.sort()\n",
+    "print(sorted(word_list, key=lambda x: x[1], reverse=True))"
+   ]
   },
   {
    "cell_type": "code",
